<resources>
    <string name="app_name">ZhihuDailyClient</string>
    <string name="Zhihu">知乎日报</string>
    <string name="splash_title">每天三次,每次七分钟</string>
    <string name="main_word">首页</string>
    <string name="sign_up_msg">请登录</string>
    <string name="myCollection">我的收藏</string>
    <string name="download">离线下载</string>
    <string name="open">OPEN</string>
    <string name="close">CLOSE</string>
    <string name="action_notification">消息</string>
    <string name="action_string">设置</string>
    <string name="action_night_module">夜间模式</string>
    <string name="action_setting_choice">设置选项</string>
</resources>
